<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".view.CursoDetalleActivity" >

	<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/main_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fitsSystemWindows="true"
		tools:context="org.ieselrincon.convalidaciones.view.CursoDetalleActivity">

		<android.support.design.widget.AppBarLayout
			android:id="@+id/appbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="@dimen/appbar_padding_top"
			android:theme="@style/AppTheme.AppBarOverlay">

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:background="?attr/colorPrimary"
				app:layout_scrollFlags="scroll|enterAlways"
				app:popupTheme="@style/AppTheme.PopupOverlay">

			</android.support.v7.widget.Toolbar>

		</android.support.design.widget.AppBarLayout>



		<!-- Login progress -->

		<LinearLayout
			android:id="@+id/CursoDetalle_Status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:visibility="gone" >

			<ProgressBar
				style="?android:attr/progressBarStyleLarge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp" />
			<TextView
				android:id="@+id/CursoDetalle_StatusMessage"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:text="@string/progress_cargando_datos"
				android:textAppearance="?android:attr/textAppearanceMedium" />
		</LinearLayout>

		<!-- form -->

		<LinearLayout
			android:id="@+id/CursoDetalle_Form"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical" >

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/darker_gray"
				android:paddingTop="@android:dimen/notification_large_icon_height"
				android:text="@string/titulo_principal_detalle_curso"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/black"
				android:textSize="@dimen/activity_vertical_margin" />

			<ScrollView
				android:id="@+id/CursoDetalle_FormScroll"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@android:color/white" >

				<LinearLayout
					style="@style/LoginFormContainer"
					android:background="@android:color/white"
					android:orientation="vertical" >

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/appbar_padding_top"
						android:background="@color/colorPrimaryDark"
						android:text="@string/titulo_curso_turno"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:textColor="@android:color/white"
						android:textSize="@dimen/activity_vertical_margin" />

					<Spinner
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/spinner_detalle_curso_turno" />

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/appbar_padding_top"
						android:background="@color/colorPrimaryDark"
						android:text="@string/titulo_curso_anno"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:textColor="@android:color/white"
						android:textSize="@dimen/activity_vertical_margin" />

					<Spinner
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/spinner_detalle_curso_anno" />

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/activity_vertical_margin"
						android:background="@color/colorPrimaryDark"
						android:text="@string/titulo_curso_ciclo"
						android:textAppearance="?android:attr/textAppearanceMedium"
						android:textColor="@android:color/white"
						android:textSize="@dimen/activity_vertical_margin" />

					<Spinner
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/spinner_detalle_curso_ciclo" />

				</LinearLayout>

			</ScrollView>
		</LinearLayout>

		<android.support.design.widget.FloatingActionButton
			android:id="@+id/fab"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|bottom"
			android:layout_margin="@dimen/fab_margin"
			android:src="@android:drawable/ic_menu_save" />

	</android.support.design.widget.CoordinatorLayout>

</merge>